--- a/MacrosManager/app/src/main/res/layout/fragment_daily_info.xml
+++ b/MacrosManager/app/src/main/res/layout/fragment_daily_info.xml
@@ -38,7 +38,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager" />
+        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+        app:spanCount="4" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/daily_food_recycler"
