--- a/MacrosManager/app/src/main/res/layout/activity_macros_manager.xml
+++ b/MacrosManager/app/src/main/res/layout/activity_macros_manager.xml
@@ -26,7 +26,9 @@
             android:layout_height="wrap_content"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
+            app:layout_constraintEnd_toEndOf="parent"
+            android:background="@color/colorPrimary"
+            app:titleTextColor="@android:color/white" />
 
         <androidx.fragment.app.FragmentContainerView
             android:id="@+id/macros_manager_nav_container"
@@ -51,7 +53,8 @@
             app:layout_constraintStart_toStartOf="parent"
             app:menu="@menu/bottom_nav_menu"
             android:visibility="@{hideBottomNav ? View.GONE : View.VISIBLE}"
-            app:layout_goneMarginBottom="@dimen/zero" />
+            app:layout_goneMarginBottom="@dimen/zero"
+            android:background="@color/colorAccent" />
 
         <com.google.android.gms.ads.AdView
             android:visibility="@{showAds ? View.VISIBLE : View.GONE}"
