--- a/MacrosManager/app/src/main/res/layout/fragment_add_meal.xml
+++ b/MacrosManager/app/src/main/res/layout/fragment_add_meal.xml
@@ -5,11 +5,15 @@
     tools:context="com.cuinsolutions.macrosmanager.AddMealActivity">
 
     <data>
+        <import type="android.view.View" />
         <import type="android.view.View.OnClickListener" />
 
         <variable
             name="listener"
             type="OnClickListener" />
+        <variable
+            name="mealEdit"
+            type="boolean" />
     </data>
 
     <ScrollView
@@ -19,8 +23,7 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical" >
+            android:layout_height="wrap_content">
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/add_meal_calories_layout"
@@ -148,7 +151,7 @@
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
-                android:id="@+id/saveMealFloatingActionButton"
+                android:id="@+id/add_meal_save"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="@dimen/margin_standard"
@@ -158,6 +161,17 @@
                 android:text="@string/save"
                 style="@style/ExtendedFab"
                 android:onClick="@{listener}" />
+
+            <Button
+                android:id="@+id/add_meal_remove"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toBottomOf="@id/add_meal_serving_layout"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_margin="@dimen/margin_standard"
+                android:text="@string/delete_meal"
+                android:onClick="@{listener}"
+                android:visibility="@{mealEdit ? View.VISIBLE : View.GONE}" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
