--- a/MacrosManager/app/src/main/res/menu/action_bar_menu.xml
+++ b/MacrosManager/app/src/main/res/menu/action_bar_menu.xml
@@ -3,7 +3,10 @@
 
     <item
         android:id="@+id/action_settings"
-        android:title="Settings"
-        />
+        android:title="@string/settings" />
+
+    <item
+        android:id="@+id/action_delete_account"
+        android:title="@string/delete_account" />
 
 </menu>
