--- a/MacrosManager/app/src/main/res/values/styles.xml
+++ b/MacrosManager/app/src/main/res/values/styles.xml
@@ -24,7 +24,7 @@
         <item name="fontFamily">@font/notosansui_bold</item>
     </style>
 
-    <style name="SettingsRadioButton" parent="Widget.Material3.CompoundButton.RadioButton">
+    <style name="SettingsRadioButton" parent="Widget.AppCompat.CompoundButton.RadioButton">
         <item name="android:textSize">@dimen/body</item>
         <item name="fontFamily">@font/notosansui_regular</item>
         <item name="buttonTint">@color/colorPrimaryDark</item>
