--- a/MacrosManager/app/src/main/res/values/styles.xml
+++ b/MacrosManager/app/src/main/res/values/styles.xml
@@ -1,45 +1,6 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.MaterialComponents.Light.NoActionBar.Bridge">
-        <!-- Customize your theme here. -->
-        <item name="android:colorPrimary">@color/colorPrimary</item>
-        <item name="android:colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="android:colorAccent">@color/colorAccent</item>
-        <item name="android:fontFamily">@font/notosansui_regular</item>
-    </style>
-
-    <style name="PageTitle">
-        <item name="android:textSize">@dimen/title</item>
-        <item name="fontFamily">@font/notosansui_bold</item>
-    </style>
-
-    <style name="PageDescription">
-        <item name="android:textSize">@dimen/body</item>
-        <item name="fontFamily">@font/notosansui_regular</item>
-    </style>
-
-    <style name="SettingsHeader">
-        <item name="android:textSize">@dimen/header</item>
-        <item name="fontFamily">@font/notosansui_bold</item>
-    </style>
-
-    <style name="SettingsRadioButton" parent="Widget.AppCompat.CompoundButton.RadioButton">
-        <item name="android:textSize">@dimen/body</item>
-        <item name="fontFamily">@font/notosansui_regular</item>
-        <item name="buttonTint">@color/colorPrimaryDark</item>
-    </style>
-
-    <style name="ExtendedFab" parent="Widget.MaterialComponents.ExtendedFloatingActionButton">
-        <item name="fontFamily">@font/notosansui_bold</item>
-        <item name="backgroundTint">@color/colorPrimaryDark</item>
-        <item name="android:textSize">@dimen/body</item>
-    </style>
-
-    <style name="MealText">
-        <item name="android:textColor">@android:color/white</item>
-        <item name="android:fontFamily">@font/notosansui_regular</item>
-        <item name="android:textSize">@dimen/numbers</item>
-    </style>
+    <style name="AppTheme" parent="Theme.MaterialComponents.Light.NoActionBar" />
 
 </resources>
